--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tetris</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P">
 </head>
 
 <body>
@@ -13,15 +14,21 @@
         <canvas id="board" class="game-board"></canvas>
         <div class="right-column">
             <div>
-                <h1>🧩🎮 TETRIS 🎮🧩</h1>
-                <p>🎰 Score: <span id="score">0</span></p>
-                <p>🏳‍🌈Lines: <span id="lines">0</span></p>
+                <h1>🧩 TETRIS 🧩</h1>
+                <p>🎮 Score: <span id="score">0</span></p>
+                <p>🏳‍🌈 Lines: <span id="lines">0</span></p>
                 <p>🏆 Level: <span id="level">0</span></p>
                 <canvas id="next" class="next"></canvas>
             </div>
             <button onclick="play()" class="play-button">play</button>
         </div>
     </div>
+
+    <script type="text/javascript" src="constants.js"></script>
+    <script type="text/javascript" src="board.js"></script>
+    <script type="text/javascript" src="piece.js"></script>
+    <script type="text/javascript" src="sound.js"></script>
+    <script type="text/javascript" src="main.js"></script>
 </body>
 
 </html>
