--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tetris</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P">
 </head>
 
@@ -14,7 +14,7 @@
         <canvas id="board" class="game-board"></canvas>
         <div class="right-column">
             <div>
-                <h1>🧩 TETRIS 🧩</h1>
+                <h1>TETRIS</h1>
                 <p>🎮 Score: <span id="score">0</span></p>
                 <p>🏳‍🌈 Lines: <span id="lines">0</span></p>
                 <p>🏆 Level: <span id="level">0</span></p>
@@ -24,11 +24,10 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="constants.js"></script>
-    <script type="text/javascript" src="board.js"></script>
-    <script type="text/javascript" src="piece.js"></script>
-    <script type="text/javascript" src="sound.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="src/constants.js"></script>
+    <script type="text/javascript" src="src/board.js"></script>
+    <script type="text/javascript" src="src/piece.js"></script>
+    <script type="text/javascript" src="src/main.js"></script>
 </body>
 
 </html>
