--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div class="right-column">
             <div>
                 <h1>TETRIS</h1>
-                <p>🎮 Score: <span id="score">0</span></p>
-                <p>🏳‍🌈 Lines: <span id="lines">0</span></p>
-                <p>🏆 Level: <span id="level">0</span></p>
+                <p>Score: <span id="score">0</span></p>
+                <p>Lines: <span id="lines">0</span></p>
+                <p>Level: <span id="level">0</span></p>
                 <canvas id="next" class="next"></canvas>
             </div>
             <button onclick="play()" class="play-button">play</button>
