--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <p>Score: <span id="score">0</span></p>
                 <p>Lines: <span id="lines">0</span></p>
                 <p>Level: <span id="level">0</span></p>
+                <p id="next-txt">🧩Next🧩</p>
                 <canvas id="next" class="next"></canvas>
             </div>
             <button onclick="play()" class="play-button">play</button>
