--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
 <body>
     <div class="grid">
+        <div class="left-column">
+            <h2>HIGH SCORES</h2>
+            <ol id="highScores"></ol>
+        </div>
         <canvas id="board" class="game-board"></canvas>
         <div class="right-column">
             <div>
@@ -18,10 +22,13 @@
                 <p>Score: <span id="score">0</span></p>
                 <p>Lines: <span id="lines">0</span></p>
                 <p>Level: <span id="level">0</span></p>
-                <p id="next-txt">🧩Next🧩</p>
-                <canvas id="next" class="next"></canvas>
+                <div class="next-box">
+                    <p id="next-txt">🧩Next🧩</p>
+                    <canvas id="next" class="next"></canvas>
+                </div>
             </div>
-            <button onclick="play()" class="play-button">play</button>
+            <button id="play-btn" onclick=" play()" class="play-button">play</button>
+            <button id="pause-btn" onclick="pause()" class="play-button">Pause</button>
         </div>
     </div>
 
