feat: keep 기능 구현(ing..)

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                 <div class="next-box">
                     <p id="next-txt">🧩Next🧩</p>
                     <canvas id="next" class="next"></canvas>
+                    <p id="keep-txt">🧩Keep🧩</p>
+                    <canvas id="keep" class="keep"></canvas>
                 </div>
             </div>
             <button id="play-btn" onclick=" play()" class="play-button">play</button>
