fix: high scores form 수정

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
             <button id="pause-btn" onclick="pause()" class="play-button">Pause</button>
         </div>
     </div>
+    <form class="input-name">
+        <h3>You got a highscore!</h3>
+        <input type="text" class="name-txt" placeholder="Enter name">
+    </form>
 
     <script type="text/javascript" src="src/constants.js"></script>
     <script type="text/javascript" src="src/board.js"></script>
