style: 테트로미노 디자인 변경, input innerText 사용

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ol id="highScores"></ol>
             <div class="kerboard">
                 <h2>Control Key</h2>
-                <ul id="contorl-keys"></ul>
+                <ul id="control-keys"></ul>
             </div>
         </div>
         <canvas id="board" class="game-board"></canvas>
